# ja_cvu_normalizer

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  sample_code.py  setup.cfg  setup.py
ja_cvu_normalizer/: ja_cvu_normalizer.py  reader.py
jp_cvu_normalizer/: jp_cvu_normalizer.py  reader.py
jp_cvu_normalizer/resource/: ISO-2022-JP.txt
test/: test_normalizer.py  test_reader.py
