[metadata]
name = jp_cvu_normalizer
version = 0.1.0
author = ekurerice
author_email = alexandria.rindybell@gmail.com
description = "異体字正規化モジュール"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ekurerice/jp_cvu_normalizer
project_urls =
    Bug Tracker = https://github.com/ekurerice/jp_cvu_normalizer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = jp_cvu_normalizer
packages = find:
python_requires = >=3.6
    

[options.packages.find]
where = jp_cvu_normalizer

[aliases]
test = unittest