[metadata]
name = ja_cvu_normalizer
version = 0.2.5
author = ekurerice
author_email = alexandria.rindybell@gmail.com
description = "異体字正規化モジュール"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ekurerice/ja_cvu_normalizer
project_urls =
    Bug Tracker = https://github.com/ekurerice/ja_cvu_normalizer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = ja_cvu_normalizer
include_package_data = True
python_requires = >=3.6